<resources>
    <string name="app_name">Taskster 2.0</string>
    <string name="tit_principal">TAREAS</string>
    <string name="tit_card">Título de la Tarea</string>
    <string name="conten_card">Escribir descripción aquí...</string>
    <string name="nueva_nota">Nueva Nota</string>
    <string name="hintNombreNota">Título</string>
    <string name="hintDescripcionNota">Nota...</string>
    <string name="buttonAdd">Agregar</string>
    <string name="buttonMod">Modificar</string>
    <string name="buttonDel">Eliminar</string>
    <string name="tit_card_mod">Modificar Nota</string>
    <string name="hintUser">Usuario</string>
    <string name="hintPass">Contraseña</string>
    <string name="buttonLogin">Ingresar</string>
    <string name="exampleDate">00/00/00</string>
    <string name="checkQuestion">¿Desea agregar una fecha de término?</string>
</resources>