<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarActivity">

    <TextView
        android:id="@+id/modNota"
        android:text="@string/tit_card_mod"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/titleModNota"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="120dp"
        android:inputType="text"
        android:hint="@string/hintNombreNota"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descripModNota"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:inputType="textMultiLine"
        android:hint="@string/hintDescripcionNota"
        app:layout_constraintTop_toBottomOf="@id/titleModNota"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/update_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:text="@string/buttonMod"
        app:layout_constraintTop_toBottomOf="@id/descripModNota"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/red"
        android:text="@string/buttonDel"
        app:layout_constraintTop_toBottomOf="@id/update_button"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>