<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <TextView
        android:id="@+id/nuevaNota"
        android:text="@string/nueva_nota"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/titleNota"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="120dp"
        android:inputType="text"
        android:hint="@string/hintNombreNota"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descripNota"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:inputType="textMultiLine"
        android:hint="@string/hintDescripcionNota"
        app:layout_constraintTop_toBottomOf="@id/titleNota"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/add_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/exampleDate"
        android:textSize="35sp"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@id/descripNota"
        app:layout_constraintRight_toLeftOf="@id/date_button"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:src="@drawable/ic_event"
        android:background="@null"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/descripNota"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="45dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:text="@string/buttonAdd"
        app:layout_constraintTop_toBottomOf="@id/add_date"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>